--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,13 @@ jobs:
         with:
           node-version: 18
       - name: Install dependencies
-        run: npm install -g pnpm && pnpm install --no-frozen-lockfile
+        run: npm install -g pnpm && pnpm install
+      - name: Cache pnpm store
+        uses: actions/cache@v3
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
       - name: Run Unit & Integration tests
         run: pnpm run test
