--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.474.0",
+    "mlly": "^1.7.4",
     "next-themes": "^0.4.4",
     "re-resizable": "^6.10.3",
     "react-arborist": "^3.4.0",
@@ -161,6 +162,7 @@
     "@commitlint/config-conventional": "19.6.0",
     "@emotion/react": "^11.14.0",
     "@faker-js/faker": "^9.4.0",
+    "@microsoft/api-extractor": "^7.52.2",
     "@microsoft/clarity": "^1.0.0",
     "@playwright/test": "^1.50.0",
     "@tanstack/eslint-plugin-query": "^5.64.2",
@@ -197,7 +199,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "vite": "^6.0.11",
-    "vite-plugin-dts": "^4.5.0",
+    "vite-plugin-dts": "^4.5.3",
     "vitest": "^3.0.4",
     "zod": "^3.24.1"
   },
