--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,16 +14,19 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 20
+        node-version: 20.18.0
+
+    - name: Install pnpm
+      run: npm install -g pnpm
 
     - name: Install Dependencies
-      run: npm ci
+      run: pnpm install --frozen-lockfile
 
     - name: Run Tests
-      run: npm test
+      run: pnpm test
 
     - name: Build Project
-      run: npm run build
+      run: pnpm build
       env:
         VITE_PUBLIC_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
         VITE_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
@@ -31,6 +34,14 @@ jobs:
     - name: Deploy to Surge
       if: success()
       run: npx surge ./dist ${{ secrets.SURGE_DOMAIN }} --token ${{ secrets.SURGE_TOKEN }}
+
+    - name: Deploy to GitHub Pages
+      if: success()
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GH_TOKEN }}
+        publish_dir: ./dist
+        force_orphan: true
 
     - name: Deploy to Vercel
       if: success()
