--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,13 +12,15 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20.18.0
       - name: Install dependencies
-        run: npm install -g pnpm && pnpm install
+        run: npm install -g pnpm@10.0.0 && pnpm install --frozen-lockfile
       - name: Cache pnpm store
         uses: actions/cache@v3
         with:
-          path: ~/.pnpm-store
+          path: |
+            ~/.pnpm-store/v3
+            node_modules/
           key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-
