--- a/package.json
+++ b/package.json
@@ -158,6 +158,10 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.27.0",
     "@commitlint/cli": "19.6.1",
     "@commitlint/config-conventional": "19.6.0",
     "@emotion/react": "^11.14.0",
@@ -185,6 +189,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jotai-devtools": "^0.11.0",
     "jsdoc": "^4.0.4",
+    "loupe": "^3.1.3",
     "msw": "^2.7.0",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
@@ -199,6 +204,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "vite": "^6.0.11",
+    "vite-plugin-babel": "^1.3.0",
     "vite-plugin-dts": "^4.5.3",
     "vitest": "^3.0.4",
     "zod": "^3.24.1"
@@ -207,6 +213,7 @@
     "workerDirectory": "public"
   },
   "engines": {
-    "node": "^20.18.0"
+  "node": "20.18.0",
+  "pnpm": "10.0.0"
   }
 }
