--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         node-version: 20.18.0
 
     - name: Install pnpm
-      run: npm install -g pnpm
+      run: npm install -g pnpm@10.0.0
 
     - name: Install Dependencies
       run: pnpm install --frozen-lockfile
