--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,10 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
     
     steps:
     - uses: actions/checkout@v4
@@ -36,12 +40,14 @@ jobs:
       run: npx surge ./dist ${{ secrets.SURGE_DOMAIN }} --token ${{ secrets.SURGE_TOKEN }}
 
     - name: Deploy to GitHub Pages
-      if: success()
+      if: github.ref == 'refs/heads/main'
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GH_TOKEN }}
+        github_token: ${{ secrets.GH_PAT }}
         publish_dir: ./dist
+        publish_branch: gh-pages
         force_orphan: true
+        full_commit_message: 'Deploy to GitHub Pages: ${{ github.sha }}'
 
     - name: Deploy to Vercel
       if: success()
