--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ jobs:
       pages: write
       id-token: write
       actions: write
+      deployments: write
     
     steps:
     - uses: actions/checkout@v4
@@ -38,22 +39,25 @@ jobs:
         VITE_PUBLIC_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
         VITE_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
 
+    - name: Upload Pages Artifact
+      uses: actions/upload-pages-artifact@v2
+      with:
+        path: ./dist
+
     - name: Deploy to Surge
       if: success()
       run: npx surge ./dist ${{ secrets.SURGE_DOMAIN }} --token ${{ secrets.SURGE_TOKEN }}
 
     - name: Configure GitHub Pages
-      uses: actions/configure-pages@v3
+      uses: actions/configure-pages@v4
+      with:
+        static_site_git_branch: gh-pages
 
     - name: Deploy to GitHub Pages
-      uses: actions/deploy-pages@v2
-      if: github.ref == 'refs/heads/main'
+      uses: actions/deploy-pages@v4
       with:
         token: ${{ github.token }}
-        target-branch: gh-pages
         publish-dir: ./dist
-        artifact-name: github-pages
-        clean: true
 
     - name: Deploy to Vercel
       if: success()
