--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,12 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Build project
+      run: npm run build
     
     - name: Setup Node.js
       uses: actions/setup-node@v3
@@ -49,13 +55,12 @@ jobs:
         path: ./dist
 
 
-    - name: Deploy to Surge
-      if: success()
-      run: npx surge ./dist ${{ secrets.SURGE_DOMAIN }} --token ${{ secrets.SURGE_TOKEN }}
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: './dist'
 
-
-    - name: Deploy to Vercel
-      if: success()
-      run: |
-        npx vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --scope ${{ secrets.VERCEL_SCOPE }} --confirm --yes
-        npx vercel alias set $(npx vercel -t ${{ secrets.VERCEL_TOKEN }} -S ${{ secrets.VERCEL_SCOPE }} --yes) ${{ secrets.VERCEL_ALIAS }}
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
+      timeout-minutes: 1
