--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,11 +19,20 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Install dependencies
-      run: npm ci
+    - name: Clean dependencies
+      run: rm -rf node_modules pnpm-lock.yaml
+
+    - name: Install pnpm
+      run: npm install -g pnpm@10.0.0
+
+    - name: Install Rollup (Linux)
+      run: pnpm add @rollup/rollup-linux-x64-gnu
 
     - name: Build project
-      run: npm run build
+      run: pnpm build
+      env:
+        VITE_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+        VITE_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
     
     - name: Setup Node.js
       uses: actions/setup-node@v3
@@ -33,20 +42,12 @@ jobs:
     - name: Install pnpm
       run: npm install -g pnpm@10.0.0
 
-    - name: Install Vercel CLI
-      run: npm install -g vercel@latest
 
     - name: Install Dependencies
       run: pnpm install --frozen-lockfile
 
     - name: Run Tests
       run: pnpm test
-
-    - name: Build Project
-      run: pnpm build
-      env:
-        VITE_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-        VITE_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
