--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,14 +38,14 @@ jobs:
     - name: Build project
       run: pnpm build --config vite.config.live.ts
       env:
-        VITE_NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-        VITE_NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
+        VITE_NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.VITE_NEXT_PUBLIC_SUPABASE_URL }}
+        VITE_NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.VITE_NEXT_PUBLIC_SUPABASE_ANON_KEY }}
 
     - name: Run Tests
       run: pnpm test
       env:
-        VITE_NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-        VITE_NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
+        VITE_NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.VITE_NEXT_PUBLIC_SUPABASE_URL }}
+        VITE_NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.VITE_NEXT_PUBLIC_SUPABASE_ANON_KEY }}
 
 
 
